--- a/dapp.json
+++ b/dapp.json
@@ -1,6 +1,6 @@
 {
-  "name": "cctime",
-  "link": "https://github.com/sqfasd/cctime/archive/master.zip",
+  "name": "asch-dapp-cctime",
+  "link": "https://github.com/AschPlatform/asch-dapp-cctime/archive/master.zip",
   "category": 1,
   "description": "Decentralized news channel",
   "tags": "asch,dapp,demo,cctime",
