How to install CCTime on localnet

--- a/config.json
+++ b/config.json
@@ -1,5 +1,10 @@
 {
 	"peers": [],
 	"secrets": [
+		"flame bottom dragon rely endorse garage supply urge turtle team demand put",
+        	"thrive veteran child enforce puzzle buzz valley crew genuine basket start top",
+        	"black tool gift useless bring nothing huge vendor asset mix chimney weird",
+        	"ribbon crumble loud chief turn maid neglect move day churn share fabric",
+        	"scan prevent agent close human pair aerobic sad forest wave toe dust"
 	]
 }
