Fix(peer) Dapp works now with ASCH 1.4

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"peers": [],
+	"peers": [{"ip":"127.0.0.1","port":4096}],
 	"secrets": [
 		"flame bottom dragon rely endorse garage supply urge turtle team demand put",
         	"thrive veteran child enforce puzzle buzz valley crew genuine basket start top",
